# PicoOpenTherm

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CMakeLists.txt  ENTITIES_REFERENCE.md  KVSTORE-UTIL.md  LICENSE  MQTT_RELIABILITY_IMPROVEMENTS.md  PROVISIONING.md  README.md  README_HA.md  SIMULATOR.md  build-all.sh  build.sh  flash-simulator.sh  provision-config.sh  provision-simple.sh  secrets.cfg.example
.github/workflows/: build.yml  docker-test.yml  release.yml  test.yml
build_tests/: Makefile  opentherm_read.pio.h  opentherm_write.pio.h
build_tests/pico-kvstore/: Makefile
build_tests/pico-kvstore/lib/pico-vfs/: Makefile
build_tests/pico-kvstore/lib/pico-vfs/pico-sdk/: Makefile
build_tests/pico-kvstore/pico-sdk/: Makefile
build_tests/pico-sdk/: Makefile
build_tests/pico-sdk/docs/: Makefile
build_tests/pico-sdk/src/: Makefile
build_tests/pico-sdk/src/common/boot_picobin_headers/: Makefile
build_tests/pico-sdk/src/common/boot_picoboot_headers/: Makefile
build_tests/pico-sdk/src/common/boot_uf2_headers/: Makefile
build_tests/pico-sdk/src/common/hardware_claim/: Makefile
build_tests/pico-sdk/src/common/pico_base_headers/: Makefile
build_tests/pico-sdk/src/common/pico_binary_info/: Makefile
build_tests/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
build_tests/pico-sdk/src/common/pico_divider_headers/: Makefile
build_tests/pico-sdk/src/common/pico_stdlib_headers/: Makefile
build_tests/pico-sdk/src/common/pico_sync/: Makefile
build_tests/pico-sdk/src/common/pico_time/: Makefile
build_tests/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
build_tests/pico-sdk/src/common/pico_util/: Makefile
build_tests/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default_padded_checksummed.S
build_tests/pico-sdk/src/rp2040/hardware_regs/: Makefile
build_tests/pico-sdk/src/rp2040/hardware_structs/: Makefile
build_tests/pico-sdk/src/rp2040/pico_platform/: Makefile
build_tests/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile
build_tests/pico-sdk/src/rp2_common/cmsis/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_adc/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_base/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_divider/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_dma/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_exception/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_flash/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_interp/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_irq/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_pio/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_pll/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_pwm/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_resets/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_rtc/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_spi/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_sync/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_ticks/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_timer/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_uart/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_vreg/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_xip_cache/: Makefile
build_tests/pico-sdk/src/rp2_common/hardware_xosc/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_aon_timer/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_async_context/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_atomic/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_bootrom/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile
build_tests/pico-sdk/src/rp2_common/pico_btstack/: Makefile
build_tests/pico-sdk/tools/: Makefile
build_tests/pioasm/: Makefile  install_manifest.txt
docker/: FEATURES.md  QUICKSTART.md  README.md  STRUCTURE.md  docker-compose.yml
docker/homeassistant/: automations.yaml  configuration.yaml  scripts.yaml  secrets.yaml.example  ui-lovelace.yaml
docker/homeassistant/lovelace/: dashboards.yaml  system_time.yaml  wifi_monitoring.yaml
docker/mosquitto/config/: mosquitto.conf
docs/: BUILD_GUIDE.md  DUAL_CORE_ARCHITECTURE.md  HOME_ASSISTANT.md  HOME_ASSISTANT_EXAMPLES.md  HOST_SIMULATOR.md  MQTT_RELIABILITY_IMPROVEMENTS.md  PIO_ANALYSIS.md  README.md  SIMULATOR.md
home_assistant/: automations.yaml  dashboard_control.yaml  dashboard_graphs.yaml  dashboard_mobile.yaml  dashboard_overview.yaml  dashboard_system.yaml  dashboard_wifi.yaml  entity_cards.yaml
host/: CMakeLists.txt
protocol/: openthermProtocol.txt
scripts/: run-host-test.sh
src/: blink.c  blink.pio  config.cpp  config.hpp  host_simulator.cpp  kvs_init_custom.c  led_blink.cpp  led_blink.hpp  lwipopts.h  main.cpp  mqtt_common.cpp  mqtt_common.hpp  mqtt_discovery.cpp  mqtt_discovery.hpp  mqtt_publish.cpp  mqtt_publish.hpp  mqtt_topics.hpp  opentherm.cpp  opentherm.h  opentherm.hpp  opentherm_base.hpp  opentherm_ha.cpp  opentherm_ha.hpp  opentherm_protocol.cpp  opentherm_protocol.hpp  opentherm_read.pio  opentherm_test.c  opentherm_test.cpp  opentherm_write.pio  simulated_opentherm.cpp  simulated_opentherm.hpp  simulated_opentherm_adapter.hpp  simulator.cpp
tests/: CMakeLists.txt  test_led_blink.cpp  test_mqtt_topics.cpp  test_opentherm_protocol.cpp  test_simulator.cpp
tools/: README.md  discovery_list.json  discovery_list.py  generate_discovery.py  subscribe_simulator.py
tools/docker-test/: Dockerfile  docker-compose.yml  publisher.py  run_test.sh
(+42 files in other folders)
